--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -636,7 +636,7 @@ ul li {
 .btn {
   position: relative;
   border-radius: 5px;
-  padding: 14px 25px;
+  padding: 10px 15px;
   border: 0;
   z-index: 1;
   color: white;
@@ -1966,9 +1966,11 @@ ul li {
 }
 
 .navbar--two .logo {
-  max-width: 145px;
+  max-width: 70px;
 }
-
+.logo {
+	max-width: 70px;
+}
 .navbar--two .navbar-bg {
   padding: 15px 42px;
 }
@@ -2320,9 +2322,11 @@ ul li {
 
 @media only screen and (max-width: 991px) {
   .navbar-area .logo {
-    max-width: 145px;
+    max-width: 55px;
   }
-
+.logo{
+  max-width: 55px;
+}
   .widget ul {
     text-align: left;
   }
